// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgDrawing clear() 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`SvgDrawing close 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M0 0 C0.4 0.4 0.49404 0.74702 1 1 C1.35777 1.17889 1.64223 1.17889 2 1 C2.50596 0.74702 2.6 0.4 3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;

exports[`SvgDrawing curve = false 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M0 0 L1 1 L2 1 L3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="mitter"
    stroke-linejoin="square"
    stroke-width="1"
  />
</svg>
`;

exports[`SvgDrawing default 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M0 0 C0.4 0.4 0.49404 0.74702 1 1 C1.35777 1.17889 1.64223 1.17889 2 1 C2.50596 0.74702 2.6 0.4 3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;

exports[`SvgDrawing undo() 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M0 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;
